Complete Exercise 1: Product Categories Analytics
- Added categories seed with 6 product categories
- Updated products seed to include category_id FK
- Created stg_categories staging model with data transformations
- Updated stg_products to include category_id
- Built dim_categories dimension table
- Created rpt_sales_by_category report with full analytics
- Added comprehensive tests (40 tests passed)
- Created verification SQL queries

--- a/models/bronze/sources.yml
+++ b/models/bronze/sources.yml
@@ -29,6 +29,8 @@ sources:
             tests:
               - unique
               - not_null
+          - name: loyalty_points
+            description: Customer loyalty rewards points balance
 
       # Order transactions
       - name: orders
@@ -63,6 +65,24 @@ sources:
             tests:
               - unique
               - not_null
+
+      # Product categories
+      - name: categories
+        description: Product category master data
+        columns:
+          - name: category_id
+            description: Unique category identifier
+            tests:
+              - unique
+              - not_null
+          - name: category_name
+            description: Display name of the category
+            tests:
+              - not_null
+          - name: department
+            description: Parent department grouping
+          - name: created_at
+            description: Timestamp when category was created
 
       # Marketing campaigns
       - name: marketing_campaigns
