Complete Exercise 4: Customer Reviews Analytics
- Add reviews.csv seed data with 20 sample reviews
- Create reviews source definition in bronze layer
- Build stg_reviews staging model with data quality tests
- Implement fct_reviews fact table with business logic
- Create rpt_product_ratings aggregation report
- Create rpt_customer_review_activity engagement report
- Add comprehensive testing (61 tests total - all passing)
- Include verification queries for Snowflake exploration

--- a/models/bronze/sources.yml
+++ b/models/bronze/sources.yml
@@ -93,3 +93,31 @@ sources:
             tests:
               - unique
               - not_null
+
+      # Customer reviews
+      - name: reviews
+        description: Customer product reviews and ratings
+        columns:
+          - name: review_id
+            description: Unique review identifier
+            tests:
+              - unique
+              - not_null
+          - name: product_id
+            description: Foreign key to products table
+            tests:
+              - not_null
+          - name: customer_id
+            description: Foreign key to customers table
+            tests:
+              - not_null
+          - name: rating
+            description: Product rating from 1 (poor) to 5 (excellent)
+            tests:
+              - not_null
+          - name: review_title
+            description: Short summary title of the review
+          - name: review_text
+            description: Full text content of the review
+          - name: review_date
+            description: Date when the review was submitted
